; ModuleID = '/home/carl/AnghaBench/RetroArch/network/netplay/extr_netplay_frontend.c_netplay_get_architecture.c'
source_filename = "/home/carl/AnghaBench/RetroArch/network/netplay/extr_netplay_frontend.c_netplay_get_architecture.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8* }

@PATH_MAX_LENGTH = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [4 x i8] c"x86\00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"x64\00", align 1
@.str.2 = private unnamed_addr constant [4 x i8] c"PPC\00", align 1
@.str.3 = private unnamed_addr constant [4 x i8] c"ARM\00", align 1
@.str.4 = private unnamed_addr constant [6 x i8] c"ARMv7\00", align 1
@.str.5 = private unnamed_addr constant [6 x i8] c"ARMv8\00", align 1
@.str.6 = private unnamed_addr constant [5 x i8] c"MIPS\00", align 1
@.str.7 = private unnamed_addr constant [7 x i8] c"Tilera\00", align 1
@MENU_ENUM_LABEL_VALUE_NOT_AVAILABLE = common dso_local global i32 0, align 4
@.str.8 = private unnamed_addr constant [6 x i8] c"%s %s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @netplay_get_architecture(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  %9 = call %struct.TYPE_3__* (...) @frontend_get_ptr()
  store %struct.TYPE_3__* %9, %struct.TYPE_3__** %5, align 8
  %10 = call i32 (...) @frontend_driver_get_cpu_architecture()
  store i32 %10, i32* %6, align 4
  %11 = load i32, i32* @PATH_MAX_LENGTH, align 4
  %12 = zext i32 %11 to i64
  %13 = call i8* @llvm.stacksave()
  store i8* %13, i8** %7, align 8
  %14 = alloca i8, i64 %12, align 16
  store i64 %12, i64* %8, align 8
  %15 = load i32, i32* %6, align 4
  switch i32 %15, label %41 [
    i32 129, label %16
    i32 128, label %19
    i32 131, label %22
    i32 136, label %25
    i32 135, label %28
    i32 134, label %31
    i32 133, label %34
    i32 130, label %37
    i32 132, label %40
  ]

16:                                               ; preds = %2
  %17 = trunc i64 %12 to i32
  %18 = call i32 @strlcpy(i8* %14, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i32 %17)
  br label %46

19:                                               ; preds = %2
  %20 = trunc i64 %12 to i32
  %21 = call i32 @strlcpy(i8* %14, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0), i32 %20)
  br label %46

22:                                               ; preds = %2
  %23 = trunc i64 %12 to i32
  %24 = call i32 @strlcpy(i8* %14, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.2, i64 0, i64 0), i32 %23)
  br label %46

25:                                               ; preds = %2
  %26 = trunc i64 %12 to i32
  %27 = call i32 @strlcpy(i8* %14, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.3, i64 0, i64 0), i32 %26)
  br label %46

28:                                               ; preds = %2
  %29 = trunc i64 %12 to i32
  %30 = call i32 @strlcpy(i8* %14, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.4, i64 0, i64 0), i32 %29)
  br label %46

31:                                               ; preds = %2
  %32 = trunc i64 %12 to i32
  %33 = call i32 @strlcpy(i8* %14, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.5, i64 0, i64 0), i32 %32)
  br label %46

34:                                               ; preds = %2
  %35 = trunc i64 %12 to i32
  %36 = call i32 @strlcpy(i8* %14, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.6, i64 0, i64 0), i32 %35)
  br label %46

37:                                               ; preds = %2
  %38 = trunc i64 %12 to i32
  %39 = call i32 @strlcpy(i8* %14, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.7, i64 0, i64 0), i32 %38)
  br label %46

40:                                               ; preds = %2
  br label %41

41:                                               ; preds = %2, %40
  %42 = load i32, i32* @MENU_ENUM_LABEL_VALUE_NOT_AVAILABLE, align 4
  %43 = call i8* @msg_hash_to_str(i32 %42)
  %44 = trunc i64 %12 to i32
  %45 = call i32 @strlcpy(i8* %14, i8* %43, i32 %44)
  br label %46

46:                                               ; preds = %41, %37, %34, %31, %28, %25, %22, %19, %16
  %47 = load i8*, i8** %3, align 8
  %48 = load i64, i64* %4, align 8
  %49 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %50 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %49, i32 0, i32 0
  %51 = load i8*, i8** %50, align 8
  %52 = call i32 @snprintf(i8* %47, i64 %48, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.8, i64 0, i64 0), i8* %51, i8* %14)
  %53 = load i8*, i8** %7, align 8
  call void @llvm.stackrestore(i8* %53)
  ret void
}

declare dso_local %struct.TYPE_3__* @frontend_get_ptr(...) #1

declare dso_local i32 @frontend_driver_get_cpu_architecture(...) #1

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #2

declare dso_local i32 @strlcpy(i8*, i8*, i32) #1

declare dso_local i8* @msg_hash_to_str(i32) #1

declare dso_local i32 @snprintf(i8*, i64, i8*, i8*, i8*) #1

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
